@@ -4,6 +4,10 @@
 
 * Fix roda pg_disconnect plugin to correctly error if error_handler is already loaded (jeremyevans)
 
+* Avoid SSL error in newer versions of net/smtp when notifying about worker crashes (jeremyevans)
+
+* Add flock pledge, needed on Ruby 3.1+ (jeremyevans)
+
 = 1.0.0 (2020-11-09)
 
 * Require unicorn-lockdown-add -o and -u options, and require options have arguments (jeremyevans)
